[Fix] Global styling - missing -ms-transform declaration for unvalign mixin

--- a/_assets/sass/_parts-global/_vars.sass
+++ b/_assets/sass/_parts-global/_vars.sass
@@ -194,6 +194,7 @@ $stumbleupon: #f74425
 =unvalign
 	top: 0
 	-webkit-transform: translateY(0)
+	-ms-transform: translateY(0)
 	-o-transform: translateY(0)
 	transform: translateY(0)
 
